KISS, Sony_TA_S2 does not need to know the IR codes, the MQTT topic producer does

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -28,6 +28,19 @@
             "problemMatcher": [
                 "$platformio"
             ]
+        },
+        {
+            "type": "PlatformIO",
+            "args": [
+                "run",
+                "--target",
+                "upload",
+                "--target",
+                "monitor"
+            ],
+            "problemMatcher": [
+                "$platformio"
+            ]
         }
     ]
 }
