Why do I get TCP_DISCONNECTED?
    fails to connect to mosquitto on cubietruck (works with Android mqtt
    dash but not with esp8266)
    does connect to mosquitto on local laptop...

--- a/platformio.ini
+++ b/platformio.ini
@@ -18,8 +18,8 @@ lib_deps_builtin =
     SPI
     Wire
 lib_deps_external =
-    https://github.com/markszabo/IRremoteESP8266.git
-    https://github.com/marvinroger/async-mqtt-client.git
+    IRremoteESP8266
+    AsyncMqttClient
 
 [env:nodemcuv2]
 board = nodemcuv2
